# whisper-server

./: .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  REPORT.md  benchmark_data.json  compare.py  docker-compose.gpu.example.yml  docker-compose.yml  docker_run.sh  keys.json.example  push-images.sh  pyproject.toml
.github/workflows/: docker-publish.yml
tests/: test_compare.py  test_http_api.py  test_integration.py  test_label_voices.py  test_model_management.py  test_models.py  test_service.py  test_speaker_recognition.py
tests/fixtures/: expected_transcriptions.json
whisper_server/: __init__.py  __main__.py  audio.py  const.py  faster_whisper_handler.py  http_api.py  key_manager.py  models.py  openai_transcriber.py  service.py  speaker_recognition.py  storage.py  wyoming_handler.py
wyoming_faster_whisper/: __init__.py  __main__.py
